--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@heroicons/react": "^1.0.6",
     "@hookform/resolvers": "^2.8.10",
     "@mui/material": "^5.8.1",
+    "@stripe/firestore-stripe-payments": "^0.0.6",
     "firebase": "^9.8.1",
     "next": "latest",
+    "next-transpile-modules": "^9.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.31.2",
