--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/material": "^5.8.1",
     "@stripe/firestore-stripe-payments": "^0.0.6",
     "firebase": "^9.8.1",
+    "moment": "^2.29.3",
     "next": "latest",
     "next-transpile-modules": "^9.0.0",
     "react": "^17.0.2",
